# routerbot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/: README.md  pull_request_template.md
.github/workflows/: ci.yml
crates/adapters/command/: Cargo.toml
crates/adapters/command/src/: lib.rs
crates/adapters/dlna-k8s/: Cargo.toml
crates/adapters/dlna-k8s/src/: lib.rs
crates/adapters/keenetic/: Cargo.toml
crates/adapters/keenetic/src/: lib.rs
crates/adapters/kubernetes/: Cargo.toml
crates/adapters/kubernetes/src/: lib.rs
crates/adapters/transmission/: Cargo.toml
crates/adapters/transmission/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: authz.rs  capabilities.rs  error.rs  lib.rs  registry.rs  service.rs
crates/chat/telegram/: Cargo.toml
crates/chat/telegram/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  command.rs  config.rs  control_plane.rs  download.rs  error.rs  lib.rs  media.rs  workload.rs
crates/core/tests/: config.rs
crates/providers/keenetic/: Cargo.toml
crates/providers/keenetic/src/: lib.rs
crates/providers/transmission/: Cargo.toml
crates/providers/transmission/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
docs/: architecture.md  configuration.md  development.md  keenetic.md  kubernetes.md  security.md
examples/: config.k3s.yaml  config.keenetic.yaml  config.linux.yaml
scripts/: build-release.sh  check.sh  cross-build-keenetic.sh
src/: main.rs
