[package]
name = "routerbot-adapter-command"
description = "Static command adapter for Routerbot."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
routerbot-app = { path = "../../app" }
routerbot-core = { path = "../../core" }

[lints]
workspace = true
