[package]
name = "routerbot-adapter-command"
description = "Static command adapter for Routerbot."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
routerbot-app = { version = "0.1.0", path = "../../app" }
routerbot-core = { version = "0.1.0", path = "../../core" }

[lints]
workspace = true
